# g_fnn

./: CMakeLists.txt  README.md  build.sh  clean.sh  data_reader.c  data_reader.h  dataset_reader.c  g_layer.c  g_layer.h  g_network.c  g_network.h  g_neuron.c  g_neuron.h  main.c
examples/: copy_file_lines.py  data_reader.c  data_reader.h  data_writer.c  data_writer.h  dataset_reader.c  dataset_reader.h  generate_fnn_layout.py  split_file_lines.py
examples/g_fnn_7segment_led/: CMakeLists.txt  convert_7segment_to_digits.py  dataset_7segment_led.py  fnn_layout.c  fnn_layout.h  inspect_7segment_led.py  main.c
resources/examples/: code_01.c  code_02.c  code_03.c  code_04.c  g_fnn.c
resources/schemas/: structures_relationship.ini  structures_relationship.md
src/: g_layer.c  g_layer.h  g_network.c  g_network.h  g_neuron.c  g_neuron.h  g_page.c  g_page.h  g_random.c  g_random.h
